[package]
edition = "2021"
name = "ribir-monitor"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.26"
tokio = {version = "1.25.0", features = ["rt"]}
tokio-tungstenite = "0.18.0"
monitor-msg = {path = "../monitor-msg", version = "0.0.0"}
crossbeam = "0.8.2"
bincode = "1.3.3"

[lib]
name = "io"
path = "src/io/lib.rs"
