[package]
edition = "2021"
name = "ribir-monitor"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
bincode = "1.3.3"
crossbeam = "0.8.2"
futures-util = "0.3.26"
monitor-msg = {path = "../monitor-msg", version = "0.0.0"}
ribir = {github = "https://github.com/RibirX/Ribir.git", features = ["wgpu_gl"]}
ribir-tracing = {path = "../ribir-tracing", features = ["trace"]}
tokio = {version = "1.25.0", features = ["rt"]}
tokio-tungstenite = "0.18.0"

[lib]
name = "io"
path = "src/io/lib.rs"
