[package]
edition = "2021"
name = "ribir-profiler-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", default-features = false}

[features]
debug = ["error", "warn", "info"]
error = []
info = ["error", "warn"]
trace = ["error", "warn", "info", "debug"]
warn = ["error"]
