[package]
edition = "2021"
name = "ribir-profiler-client"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
mock-proc-macros = {path = "../mock-proc-macros", version = "0.0.0"}
serde = "1.0.152"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", default-features = false}
tungstenite = "0.18.0"
url = "2.3.1"

[features]
debug = ["error", "warn", "info"]
default = ["warn"]
error = []
info = ["error", "warn"]
trace = ["error", "warn", "info", "debug"]
warn = ["error"]
